--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,11 +3,13 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#2600B3</color>
 
-    <color name="zoneActiveRecovery">#00B988</color>
-    <color name="zoneEndurance">#60EEB2</color>
-    <color name="zoneTempo">#FFF500</color>
-    <color name="zoneThreshold">#FB8C65</color>
-    <color name="zoneVO2Max">#FE581F</color>
-    <color name="zoneAerobic">#D60404</color>
-    <color name="zoneAnaerobic">#B700A2</color>
+    <color name="zone0">#2386D9</color>
+    <color name="zone1">#00B988</color>
+    <color name="zone2">#60EEB2</color>
+    <color name="zone3">#FFF500</color>
+    <color name="zone4">#FDC84C</color>
+    <color name="zone5">#FB8C65</color>
+    <color name="zone6">#FE581F</color>
+    <color name="zone7">#D60404</color>
+    <color name="zone8">#B700A2</color>
 </resources>
