--- a/app/src/main/res/drawable/launch_background.xml
+++ b/app/src/main/res/drawable/launch_background.xml
@@ -1,7 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
-        <shape android:shape="rectangle">
-            <solid android:color="#ff000000" />
-        </shape>
+        <color android:color="#FFFFFF" />
     </item>
 </layer-list>
